--- a/index.html
+++ b/index.html
@@ -1,4 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  <script type='module' src='./main.js'></script>
+<script type='module' src='./main.js'></script>
+
+<body>
+  <ul>
+    <li class='element'>5.33</li>
+    <li class='element'>25.31</li>
+    <li class='element'>2.5</li>
+    <li class='element'>7.99</li>
+    <li class='element'>10.11</li>
+    <li class='element'>22.44</li>
+    <li class='element'>66.20</li>
+  </ul>
+</body>
+
 </html>
